--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card">
-        <img src="image1.jpg" class="card-img-top" alt="Max Ernsts Kunstwerk">
+        <img src="https://www.bing.com/images/search?view=detailV2&ccid=GrwO1Wv7&id=41BE20E63000FE70A4512118203D95D95B063D7F&thid=OIP.GrwO1Wv7H82oTDKralqhTQHaEf&mediaurl=https%3a%2f%2fi.pinimg.com%2foriginals%2fdd%2f32%2f59%2fdd32599aec768bd698a06ddc58f9b057.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.1abc0ed56bfb1fcda84c32ab6a5aa14d%3frik%3dfz0GW9mVPSAYIQ%26pid%3dImgRaw%26r%3d0&exph=1133&expw=1868&q=max+ernst&simid=608036338900480704&FORM=IRPRST&ck=44DDF606E2EBACF03E03D505D3C5E9F8&selectedIndex=2&itb=0" class="card-img-top" alt="Max Ernsts Kunstwerk">
         <div class="card-body">
           <h5 class="card-title">Max Ernst Kunstwerk</h5>
           <p class="card-text">Entdecken Sie die faszinierenden Werke von Max Ernst, die die Grenzen der Vorstellungskraft sprengen.</p>
