--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ErnstExplorer - Entdecken Sie Max Ernsts Welt</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -39,7 +39,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card">
-        <img src="https://www.bing.com/images/search?view=detailV2&ccid=GrwO1Wv7&id=41BE20E63000FE70A4512118203D95D95B063D7F&thid=OIP.GrwO1Wv7H82oTDKralqhTQHaEf&mediaurl=https%3a%2f%2fi.pinimg.com%2foriginals%2fdd%2f32%2f59%2fdd32599aec768bd698a06ddc58f9b057.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.1abc0ed56bfb1fcda84c32ab6a5aa14d%3frik%3dfz0GW9mVPSAYIQ%26pid%3dImgRaw%26r%3d0&exph=1133&expw=1868&q=max+ernst&simid=608036338900480704&FORM=IRPRST&ck=44DDF606E2EBACF03E03D505D3C5E9F8&selectedIndex=2&itb=0" class="card-img-top" alt="Max Ernsts Kunstwerk">
+        <img src="https://www.christies.com/img/LotImages/2019/CKS/2019_CKS_16931_0121_000(max_ernst_aux_antipodes_du_paysage042523).jpg?mode=max" class="card-img-top" alt="Max Ernsts Kunstwerk">
         <div class="card-body">
           <h5 class="card-title">Max Ernst Kunstwerk</h5>
           <p class="card-text">Entdecken Sie die faszinierenden Werke von Max Ernst, die die Grenzen der Vorstellungskraft sprengen.</p>
@@ -49,7 +49,7 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img src="image2.jpg" class="card-img-top" alt="Max Ernsts Skulptur">
+        <img src="https://sammlung.staedelmuseum.de/images/4107/max-ernst-nature-dawn-la-nature-laurore-sg1247--thumb-xl.jpg" class="card-img-top" alt="Max Ernsts Skulptur">
         <div class="card-body">
           <h5 class="card-title">Max Ernsts Skulptur</h5>
           <p class="card-text">Bewundern Sie die einzigartigen Skulpturen von Max Ernst, die in der Welt der Kunst als bahnbrechend gelten.</p>
@@ -59,7 +59,7 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img src="image3.jpg" class="card-img-top" alt="Max Ernsts Inspiration">
+        <img src="https://www.bing.com/images/search?view=detailV2&ccid=jtGocvmo&id=936584B1A0DC9870771D4C0500762DB9CD1CFBF6&thid=OIP.jtGocvmoEMUS5WFDglMknwHaFN" class="card-img-top" alt="Max Ernsts Inspiration">
         <div class="card-body">
           <h5 class="card-title">Max Ernsts Inspiration</h5>
           <p class="card-text">Erkunden Sie die Inspiration hinter Max Ernsts kreativen Prozess und seinen unverwechselbaren Stil.</p>
@@ -77,8 +77,4 @@
   </div>
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-</body>
-</html>
+<script
