--- a/index.html
+++ b/index.html
@@ -122,6 +122,25 @@
   </div>
 </div>
 
+  <!-- Login-Button -->
+<button type="button" onclick="login()">Login</button>
+
+<!-- Sign In-Button -->
+<button type="button" onclick="signIn()">Sign In</button>
+
+<script>
+  // Funktion für den Login-Button
+  function login() {
+    // Hier kannst du den Code für den Login-Vorgang einfügen
+    alert("Login erfolgreich!");
+  }
+
+  // Funktion für den Sign In-Button
+  function signIn() {
+    // Hier kannst du den Code für den Sign-In-Vorgang einfügen
+    alert("Sign In erfolgreich!");
+  }
+</script>
 
 <!-- Footer Beispiel -->
 <footer class="footer mt-auto py-3 bg-primary">
