--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     </div>
   </div>
 </nav>
+  <button class="btn btn-primary ml-auto">Login / Sign In</button>
+      </div>
+    </nav>
+  </div>
+</div>
 <!-- Bootstrap Navbar Ende -->
 
 <!-- Kartenkomponente (Card) Raster -->
