--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         </li>
       </ul>
     </div>
+    <!-- Login und Sign In Buttons -->
+    <div class="d-flex">
+      <button class="btn btn-primary me-2">Login</button>
+      <button class="btn btn-primary">Sign In</button>
+    </div>
   </div>
 </nav>
-  <button class="btn btn-primary ml-auto">Login / Sign In</button>
-      </div>
-    </nav>
-  </div>
-</div>
 <!-- Bootstrap Navbar Ende -->
 
 <!-- Kartenkomponente (Card) Raster -->
