--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <!-- Login und Sign In Buttons -->
     <div class="d-flex">
        <!-- Login-Button -->
-<button type="button" onclick="login()">Login</button>
+<button class="btn btn-primary me-2" onclick="login()">Login</button>
 
 <!-- Sign In-Button -->
-<button type="button" onclick="signIn()">Sign In</button>
+<button class="btn btn-primary" onclick="signIn()">Sign In</button>
 
 <script>
   // Funktion für den Login-Button
