--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="nav-link active" aria-current="page" href="#">Startseite</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">AR-Ausstellungen</a>
+          <a class="nav-link" href="ar">AR-Ausstellungen</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Künstler</a>
