--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
   crossorigin="anonymous"></script>
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://ar-js-org.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
 
@@ -30,6 +32,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="ar">AR-Ausstellungen</a>
+          <a-scene embedded arjs="sourceType: webcam;">
+
+        <!-- HIRO-Marker -->
+            <a-marker preset="hiro">
+        <!-- Text, der angezeigt wird, wenn der Marker erkannt wird -->
+            <a-text value="Willkommen bei den AR-Ausstellungen von ErnstExplorer!" position="0 0.5 0" align="center"></a-text>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Künstler</a>
