--- a/ar-ausstellungen.html
+++ b/ar-ausstellungen.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AR-Ausstellungen - ErnstExplorer</title>
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://ar-js-org.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+</head>
+<body style="margin: 0; overflow: hidden;">
+  <a-scene embedded arjs="sourceType: webcam;">
+
+    <!-- HIRO-Marker -->
+    <a-marker preset="hiro">
+      <!-- Text, der angezeigt wird, wenn der Marker erkannt wird -->
+      <a-text value="Willkommen bei den AR-Ausstellungen von ErnstExplorer!" position="0 0.5 0" align="center"></a-text>
+    </a-marker>
+
+    <a-entity camera></a-entity>
+  </a-scene>
+</body>
+</html>
 
