--- a/index.html
+++ b/index.html
@@ -31,14 +31,8 @@
           <a class="nav-link active" aria-current="page" href="#">Startseite</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="ar">AR-Ausstellungen</a>
-          <a-scene embedded arjs="sourceType: webcam;">
-
-        <!-- HIRO-Marker -->
-            <a-marker preset="hiro">
-        <!-- Text, der angezeigt wird, wenn der Marker erkannt wird -->
-            <a-text value="Willkommen bei den AR-Ausstellungen von ErnstExplorer!" position="0 0.5 0" align="center"></a-text>
-        </li>
+          <a class="nav-link" href="ar-ausstellungen.html">AR-Ausstellungen</a>
+         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Künstler</a>
         </li>
