--- a/ar-ausstellungen.html
+++ b/ar-ausstellungen.html
@@ -33,10 +33,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Startseite</a>
+          <a class="nav-link" href="#">Startseite</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="ar-ausstellungen.html">AR-Ausstellungen</a>
+          <a class="nav-link active" aria-current="page" href="ar-ausstellungen.html">AR-Ausstellungen</a>
          </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Künstler</a>
