--- a/ar-ausstellungen.html
+++ b/ar-ausstellungen.html
@@ -79,6 +79,7 @@
         src="Max-Ernst-At-the-first-clear-word.jpg"
         width="2"
         height="2"
+        rotation="0 0 90"
         position="0 0 0"
 ></a-image>
 </a-nft>
